[tool.poetry]
name = "cromwell-az-e2e-test"
version = "0.1.0"
description = ""
authors = ["JVThomas <jthomas@broadinstitute.org>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "cromwell_az_e2e_test.az_e2e:start"
