[tool.poetry]
name = "cromwell-az-e2e"
version = "0.1.0"
description = ""
authors = ["JVThomas <jthomas0209@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"